updates to 8/27 slides.

--- a/slides/01-welcome.qmd
+++ b/slides/01-welcome.qmd
@@ -303,7 +303,7 @@ It is my intent that students from all diverse backgrounds and perspectives be w
 
 -   Group 6: [Artificial intelligence policy](https://sta221-fa24.netlify.app/syllabus#academic-honesty)
 
--   Group 7: [Late work policy and waiver for extenuating circumstances](https://sta221-fa24.netlify.app/syllabus#late-work-policy)
+-   Group 7: [Late work policy and waiver for extenuating circumstances](https://sta221-fa24.netlify.app/syllabus#attendance-policy)
 
 -   Group 8: [Attendance and lecture recording request](https://sta221-fa24.netlify.app/syllabus#late-work-policy)
 
