notes for August 29.

--- a/slides/01-welcome.qmd
+++ b/slides/01-welcome.qmd
@@ -285,8 +285,8 @@ It is my intent that students from all diverse backgrounds and perspectives be w
 1.  Introduce yourself to your group members.
 2.  Choose a reporter. This person will share the group's summary with the class.
 3.  Read the portion of the syllabus assigned to your group.
-4.  Discuss the key points and questions.
-5.  The report will share the group's summary of key points and remaining questions with the class.
+4.  Discuss the key points and questions you my have.
+5.  The reporter will share a summary with the class.
 :::
 
 ## Syllabus activity assignments
